Hook up broadcasts

--- a/content/notices/2021-12-09-log4j.md
+++ b/content/notices/2021-12-09-log4j.md
@@ -1,6 +1,7 @@
 Title: RCE in Log4j
 Date: 2021-12-09 23:00
-Category: Software Frameworks, Libraries, and Components
+Category: Test
+Previous: Software Frameworks, Libraries, and Components
 Tags: Java, Log4j, Critical Severity
 Slug: log4j
 Summary: A remote code execution vulnerability has been found in the popular Java logging library Log4j. This issue is easily exploited in common configurations, and has been assigned a bug alert severity of 'critical'.
