Announce Telegram and give update

--- a/content/notices/2022-01-04-bugalert.md
+++ b/content/notices/2022-01-04-bugalert.md
@@ -1,7 +1,7 @@
 ---
 Title: Bug Alert is Live
 Date: 2022-01-04 14:00
-Category: Test
+Category: Bug Alert News
 Tags: 
 Slug: bugalert
 Summary: Hello, world! Bug Alert is now live. Read the announcement post at https://mattslifebytes.com/2022/01/04/bugalert-org/ to learn more.
