Add notice credit and note

--- a/content/notices/2022-01-25-pkexec.md
+++ b/content/notices/2022-01-25-pkexec.md
@@ -11,3 +11,7 @@ On Tuesday, January 25th, 2022, [Qualys published a blog post detailing an issue
 
 
 PwnKit, as this vulnerability is being called, has been assigned CVE-2021-4034. Patches are available now for most Linux distributions.
+
+Thank you to [Matt Cobb](https://github.com/mattcobb) for reporting this issue.
+
+This was Bug Alert's first notice. If you have feedback (did you agree/disagree that a notice should be sent?) or questions, please comment on the discussion thread linked below.
