Add finances notce

--- a/content/notices/2022-01-25-pkexec.md
+++ b/content/notices/2022-01-25-pkexec.md
@@ -14,4 +14,4 @@ PwnKit, as this vulnerability is being called, has been assigned CVE-2021-4034. 
 
 Thank you to [Matt Cobb](https://github.com/mattcobb) for reporting this issue.
 
-This was Bug Alert's first notice. If you have feedback (did you agree/disagree that a notice should be sent?) or questions, please comment on the discussion thread linked below.
+This was Bug Alert's first notice. If you have feedback (did you agree/disagree that a notice should have been sent?) or questions, please comment on the discussion thread linked below. This notice cost the project approximately $120 USD to send. If you would like to support the project, [you can learn more here](https://bugalert.org/content/pages/financial-support.html).
