--- a/content/notices/2022-01-25-pkexec.md
+++ b/content/notices/2022-01-25-pkexec.md
@@ -2,7 +2,7 @@
 Title: Local privilege escalation in pkexec, a core Linux system component
 Date: 2022-01-25 20:42
 Category: Operating Systems
-Tags: pkexec, polkit, pwnkit, Very High
+Tags: pkexec, polkit, Pwnkit, Linux, Very High Severity
 Slug: pkexec
 Summary: A local privilege escalation bug (from any user to root) has been found polkit's pkexec, and exploit code is available. This binary is a SUID root program installed by default on every major Linux distro, and the flaw has been assigned a bug alert severity of 'very high'.
 ---
