--- a/content/notices/2022-01-25-pkexec.md
+++ b/content/notices/2022-01-25-pkexec.md
@@ -7,7 +7,7 @@ Slug: pkexec
 Summary: A local privilege escalation bug (from any user to root) has been found polkit's pkexec, and exploit code is available. This binary is a SUID root program installed by default on every major Linux distro, and the flaw has been assigned a bug alert severity of 'very high'.
 ---
 
-On Tuesday, January 25th, 2022, [Qualys published a blog post detailing an issue they identified](https://blog.qualys.com/vulnerabilities-threat-research/2022/01/25/pwnkit-local-privilege-escalation-vulnerability-discovered-in-polkits-pkexec-cve-2021-4034) within pkexec, a core component of polkit (formerly known as PolicyKit). In the time since Qualys disclosed this issue, [exploit code](https://haxx.in/files/blasty-vs-pkexec.c) has been made available. Bug Alert's volunteer team believes, but has not yet confirmed, that this vulnerability would also allow for container escape in Docker or Kubernetes environments, which could be especially damaging in shared infrastructure systems like CI/CD or shared application runtime environments. This post will be updated as more information becomes available.
+On Tuesday, January 25th, 2022, [Qualys published a blog post detailing an issue they identified](https://blog.qualys.com/vulnerabilities-threat-research/2022/01/25/pwnkit-local-privilege-escalation-vulnerability-discovered-in-polkits-pkexec-cve-2021-4034) within pkexec, a core component of polkit (formerly known as PolicyKit). In the time since Qualys disclosed this issue, [exploit code](https://haxx.in/files/blasty-vs-pkexec.c) has been made available. The pkexec binary is _most commonly_ installed with Linux GUI components and may not be present on servers that run 'minimal' OS installs. This post will be updated as more information becomes available.
 
 
 PwnKit, as this vulnerability is being called, has been assigned CVE-2021-4034. Patches are available now for most Linux distributions.
