--- a/content/notices/2022-01-25-pkexec.md
+++ b/content/notices/2022-01-25-pkexec.md
@@ -4,7 +4,7 @@ Date: 2022-01-25 20:42
 Category: Operating Systems
 Tags: pkexec, polkit, Pwnkit, Linux, Very High Severity
 Slug: pkexec
-Summary: A local privilege escalation bug (from any user to root) has been found polkit's pkexec, and exploit code is available. This binary is a SUID root program installed by default on every major Linux distro, and the flaw has been assigned a bug alert severity of 'very high'.
+Summary: A local privilege escalation bug (from any user to root) has been found polkit's pkexec, and exploit code is available. This binary is a SUID root program available on every major Linux distro, and is most commonly installed if a GUI is present. The flaw has been assigned a bug alert severity of 'very high'.
 ---
 
 On Tuesday, January 25th, 2022, [Qualys published a blog post detailing an issue they identified](https://blog.qualys.com/vulnerabilities-threat-research/2022/01/25/pwnkit-local-privilege-escalation-vulnerability-discovered-in-polkits-pkexec-cve-2021-4034) within pkexec, a core component of polkit (formerly known as PolicyKit). In the time since Qualys disclosed this issue, [exploit code](https://haxx.in/files/blasty-vs-pkexec.c) has been made available. The pkexec binary is _most commonly_ installed with Linux GUI components and may not be present on servers that run 'minimal' OS installs. This post will be updated as more information becomes available.
