--- a/content/notices/2022-02-08-sap.md
+++ b/content/notices/2022-02-08-sap.md
@@ -9,7 +9,7 @@ Summary: A request smuggling issue in SAP NetWeaver, SAP Content Server, and SAP
 
 On Tuesday, February 8, 2022, [SAP published a notice detailing a major request smuggling flaw](https://blogs.sap.com/2022/02/08/sap-partners-with-onapsis-to-identify-and-patch-cybersecurity-vulnerabilities/) within their SAP NetWeaver, SAP Content Server, and SAP Web Dispatcher products, which SAP claims could lead to authentication bypass.
 
-Publicly available documentation in scarce, but the Bug Alert team has analyzed [the PoC](https://github.com/Onapsis/onapsis_icmad_scanner/blob/master/src/ICMAD_scanner.py) and SAP documentation. It appears that SAP [can utilize the `REMOTE_USER` header](https://help.sap.com/viewer/e815bb97839a4d83be6c4fca48ee5777/7.5.21/en-US/4a47abb3e1f41cd4e10000000a421937.html) (which is usually stripped from untrusted traffic) to authenticate a user through an authenticating proxy or SSO module.
+Publicly available documentation is scarce, but the Bug Alert team has analyzed [the PoC](https://github.com/Onapsis/onapsis_icmad_scanner/blob/master/src/ICMAD_scanner.py) and SAP documentation. It appears that SAP [can utilize the `REMOTE_USER` header](https://help.sap.com/viewer/e815bb97839a4d83be6c4fca48ee5777/7.5.21/en-US/4a47abb3e1f41cd4e10000000a421937.html) (which is usually stripped from untrusted traffic) to authenticate a user through an authenticating proxy or SSO module.
 
 Again, publicly available information is limited at this time, but it appears likely that this request smuggling issue could be utilized to insert the `REMOTE_USER` request header and impersonate another SAP user, including the present-by-default 'Administrator' account.
 
