Link to new cyberkendra post

--- a/content/notices/2022-03-30-spring.md
+++ b/content/notices/2022-03-30-spring.md
@@ -13,6 +13,8 @@ There is currently no patch. The existing proof-of-concept, as well as the proof
 
 Continue to monitor the Praetorian blog and the Bug Alert discussion thread (linked below) for further information. Once available, official notice from the Spring project is likely to be placed on the [VMware Tanzu security advisories page](https://tanzu.vmware.com/security/) (VMware owns the Spring project). It's likely they will also [furnish a blog post](https://spring.io/blog) with further information at a later time.
 
+Cyber Kendra has also been closely following this situation and has, as of minutes ago, provided technical details and translations from Chinese-language sources. [That blog post can be found here](https://www.cyberkendra.com/2022/03/spring4shell-details-and-exploit-code.html).
+
 In the past several hours, Bug Alert has been actively researching and providing information in real-time on Twitter. Consider following along at [@BugAlertDotOrg](https://twitter.com/BugAlertDotOrg).
 
 Finally, this is ***not*** related to CVE-2022-22963, Spring Cloud Function, or SpEL routing expressions. That is a separate, less-widespread issue [documented here](https://tanzu.vmware.com/security/cve-2022-22963).
