--- a/content/notices/2022-03-30-spring.md
+++ b/content/notices/2022-03-30-spring.md
@@ -7,7 +7,7 @@ Slug: spring
 Summary: Praetorian has confirmed that a remote code execution vulnerability exists in Spring, an extremely popular Java framework. The flaw has been assigned a bug alert severity of 'critical'.
 ---
 
-[Praetorian has confirmed the existence of the remote code execution vulnerability that impacts Spring Core.](https://www.praetorian.com/blog/spring-core-jdk9-rce/) Praetorian has also confirmed online rumors of the issue being caused by a partial fix to a very old issue, (CVE-2010-1622)[http://blog.o0o.nu/2010/06/cve-2010-1622.html]. Unfortunately, proof-of-concept code is now widely available and will likely be weaponized within the next few hours.
+[Praetorian has confirmed the existence of the remote code execution vulnerability that impacts Spring Core.](https://www.praetorian.com/blog/spring-core-jdk9-rce/) Praetorian has also confirmed online rumors of the issue being caused by a partial fix to a very old issue, (CVE-2010-1622)[http://blog.o0o.nu/2010/06/cve-2010-1622.html]. Unfortunately, proof-of-concept code is now widely available and will likely be weaponized within the next few hours. What we don't know, though, is how widespread this issue really is, or how easily exploited it will be in the real world. For those reasons, it would (likely) be premature to engage your software engineering teams at this time.
 
 There is currently no patch. The existing proof-of-concept, as well as the proof-of-concept from 2010, both reference `class.module.classLoader` when constructing the attack. Bug Alert therefore recommends testing and deploying a WAF rule that analyzes request bodies for requests containing the term `classLoader`. Please remember that regex-based WAF rules are often easily bypassed, so do not regard this as a long-term solution.
 
