--- a/content/notices/2022-03-29-spring.md
+++ b/content/notices/2022-03-29-spring.md
@@ -3,7 +3,7 @@ Title: Advanced warning: possible remote code execution (RCE) in Spring, an extr
 Date: 2022-03-29 23:00
 Category: Software Frameworks, Libraries, and Components
 Tags: Java, Spring, High Severity
-Slug: spring
+Slug: springwarning
 Summary: An unconfirmed, but possible, remote code execution vulnerability is believed to exist in Spring, an extremely popular Java framework. This issue is likely easily exploited in common configurations. If confirmed, another notice will be sent out with a severity of 'critical'. While unconfirmed, the severity has been assigned 'high'.
 ---
 
