Hedge a bit on language

--- a/content/notices/2022-03-30-spring.md
+++ b/content/notices/2022-03-30-spring.md
@@ -9,7 +9,7 @@ Summary: Praetorian has confirmed that a remote code execution vulnerability exi
 
 **Preamble**
 
-This is ***not*** related to CVE-2022-22963 (aka 'Spring4Shell'), Spring Cloud Function, or SpEL routing expressions. That is a separate, less-widespread issue [documented here](https://tanzu.vmware.com/security/cve-2022-22963).
+This is ***not*** related to CVE-2022-22963 (aka 'Spring4Shell'), Spring Cloud Function, or SpEL routing expressions. That is a separate, (possibly?) less widespread issue [documented here](https://tanzu.vmware.com/security/cve-2022-22963).
 
 **Advisory**
 
