Add some updates for our APAC readers

--- a/content/notices/2022-03-30-spring.md
+++ b/content/notices/2022-03-30-spring.md
@@ -4,7 +4,7 @@ Date: 2022-03-30 15:00
 Category: Software Frameworks, Libraries, and Components
 Tags: Java, Spring, Critical Severity, CVE-2010-1622
 Slug: spring
-Summary: Praetorian has confirmed that a remote code execution vulnerability exists in Spring, an extremely popular Java framework. The flaw has been assigned a bug alert severity of 'critical'.
+Summary: Praetorian has confirmed that a remote code execution vulnerability exists in Spring, an extremely popular Java framework. How broadly this impacts the Spring ecosystem remains unclear. The flaw has been assigned a bug alert severity of 'critical'.
 ---
 
 **Preamble**
@@ -13,14 +13,12 @@ This is ***not*** related to CVE-2022-22963, Spring Cloud Function, or SpEL rout
 
 **Advisory**
 
-[Praetorian has confirmed the existence of the remote code execution vulnerability that impacts Spring Core.](https://www.praetorian.com/blog/spring-core-jdk9-rce/) Praetorian has also confirmed online rumors of the issue being caused by a partial fix to a very old issue, (CVE-2010-1622)[http://blog.o0o.nu/2010/06/cve-2010-1622.html]. Unfortunately, proof-of-concept code is now widely available and will likely be weaponized within the next few hours. What we don't know, though, is how widespread this issue really is, or how easily exploited it will be in the real world. For those reasons, it would (likely) be premature to engage your software engineering teams at this time.
+[Praetorian has confirmed the existence of the remote code execution vulnerability that impacts Spring Core.](https://www.praetorian.com/blog/spring-core-jdk9-rce/) Praetorian has also confirmed online rumors of the issue being caused by a partial fix to a very old issue, [CVE-2010-1622](http://blog.o0o.nu/2010/06/cve-2010-1622.html). Unfortunately, proof-of-concept code is now widely available and is likely to be weaponized. What we don't know, though, is how widespread this issue really is, or how easily exploited it will be in the real world. As of late in the evening on March 30th, New York time, there's not much evidence yet that it will be exploitable in common configurations.
 
 There is currently no patch. The existing proof-of-concept, as well as the proof-of-concept from 2010, both reference `class.module.classLoader` when constructing the attack. Bug Alert therefore recommends testing and deploying a WAF rule that analyzes request bodies for requests containing the term `classLoader`. Please remember that regex-based WAF rules are often easily bypassed, so do not regard this as a long-term solution.
 
 Continue to monitor the Praetorian blog and the Bug Alert discussion thread (linked below) for further information. Once available, official notice from the Spring project is likely to be placed on the [VMware Tanzu security advisories page](https://tanzu.vmware.com/security/) (VMware owns the Spring project). It's likely they will also [furnish a blog post](https://spring.io/blog) with further information at a later time.
 
-Cyber Kendra has also been closely following this situation and has, as of minutes ago, provided technical details and translations from Chinese-language sources. [That blog post can be found here](https://www.cyberkendra.com/2022/03/spring4shell-details-and-exploit-code.html).
-
-In the past several hours, Bug Alert has been actively researching and providing information in real-time on Twitter. Consider following along at [@BugAlertDotOrg](https://twitter.com/BugAlertDotOrg).
+[Rapid7 has put together a fantastic writeup with technical details](https://www.rapid7.com/blog/post/2022/03/30/spring4shell-zero-day-vulnerability-in-spring-framework/). Their blog post also details some of the configurations that are required for the exploit to be successful, and they have committed to using that venue to provide additional information as it becomes available.
 
 If you have feedback or questions, please comment on the discussion thread linked below. This notice cost the project approximately $150 USD to send. If you would like to support the project, [you can learn more here](https://bugalert.org/content/pages/financial-support.html)
