Link to Spring post

--- a/content/notices/2022-03-30-spring.md
+++ b/content/notices/2022-03-30-spring.md
@@ -1,17 +1,20 @@
 ---
-Title: Confirmed remote code execution (RCE) in Spring Core, an extremely popular Java framework
+Title: Confirmed remote code execution (RCE) in Spring Core, an extremely popular Java framework (CVE-2022-22965)
 Date: 2022-03-30 15:00
 Category: Software Frameworks, Libraries, and Components
-Tags: Java, Spring, Critical Severity, CVE-2010-1622
+Tags: Java, Spring, Critical Severity, CVE-2010-1622, CVE-2022-22965
 Slug: spring
 Summary: Praetorian has confirmed that a remote code execution vulnerability exists in Spring, an extremely popular Java framework. How broadly this impacts the Spring ecosystem remains unclear. The flaw has been assigned a bug alert severity of 'critical'.
 ---
 
-**Preamble**
+#### Updated Notice, 10:00AM New York Time
+
+This flaw has been assigned CVE-2022-22965, and the Spring team is now issuing fixes. [Please follow their post here for further updates](https://spring.io/blog/2022/03/31/spring-framework-rce-early-announcement).
+
+
+#### Original Notice
 
 This is ***not*** related to CVE-2022-22963, Spring Cloud Function, or SpEL routing expressions. That is a separate, (possibly?) less widespread issue [documented here](https://tanzu.vmware.com/security/cve-2022-22963). Sadly, both are being referred to broadly as 'Spring4Shell', significantly adding to the confusion. We suggest the community refrain from using the term.
-
-**Advisory**
 
 [Praetorian has confirmed the existence of the remote code execution vulnerability that impacts Spring Core.](https://www.praetorian.com/blog/spring-core-jdk9-rce/) Praetorian has also confirmed online rumors of the issue being caused by a partial fix to a very old issue, [CVE-2010-1622](http://blog.o0o.nu/2010/06/cve-2010-1622.html). Unfortunately, proof-of-concept code is now widely available and is likely to be weaponized. What we don't know, though, is how widespread this issue really is, or how easily exploited it will be in the real world. As of late in the evening on March 30th, New York time, there's not much evidence yet that it will be exploitable in common configurations.
 
