Added fix suggestions from vendor

--- a/content/notices/2022-04-20-jira.md
+++ b/content/notices/2022-04-20-jira.md
@@ -8,3 +8,5 @@ Summary: An Authentication Bypass vulnerability has been found in Atlassian Jira
 ---
 
 On Wednesday, April 20th, 2022, [Atlassian released a Security Advisory](https://confluence.atlassian.com/jira/jira-security-advisory-2022-04-20-1115127899.html) stating a component of their Jira software, Jira Seraph, is vulnerable to an Authentication Bypass vulnerability. At this time they have not released any specifics as to what the exact vulnerable endpoint is, or any Indicators of Compromise that could lead defenders to believe they have been exploited. This post will be updated as information becomes available.
+
+At this time, Atlassian is advising customers to install updated version of Jira Core Server, Jira Software Server, and Jira Software Data Center. If updating is not possible, installing updates to affected plug-ins (found in the advisory) is suggested, followed by disabling those plug-ins if updates are not available.
