Update Follina post with Microsoft information

--- a/content/notices/2022-05-30-office.md
+++ b/content/notices/2022-05-30-office.md
@@ -2,15 +2,16 @@
 Title: Remote Code Execution in Microsoft Office Products for Windows
 Date: 2022-05-30 09:00
 Category: End-User Applications
-Tags: Office, Follina, Windows, Microsoft, High Severity
+Tags: Office, MSDT, Follina, Windows, Microsoft, High Severity
 Slug: office
-Summary: A remote code execution vulnerability, dubbed 'Follina', has been found in Microsoft Office. This issue can be exploited in the default configuration on Windows, and only requires the user be tricked into downloading a malicious file. There is no patch. This issue has been assigned a bug alert severity of 'high'.
+Summary: A remote code execution vulnerability, dubbed 'Follina', has been found in Microsoft Office using Microsoft Support Diagnostic Tool (MSDT). This issue can be exploited in the default configuration on Windows, and only requires the user be tricked into downloading a malicious file. There is no patch. This issue has been assigned a bug alert severity of 'high'.
 ---
 
-On Monday, May 30th, 2022, [security researcher Kevin Beaumont published a blog post](https://doublepulsar.com/follina-a-microsoft-office-code-execution-vulnerability-1a47fce5629e) detailing an exploit, 'Follina', that had been discovered three days prior and discussed at length on Twitter. This exploit abuses the template retrieval mechanism in Microsoft Office installations on Microsoft Windows systems to initiate arbitrary PowerShell code. Microsoft has not yet acknowledged this issue, and there is no patch. This exploit has been actively used against Russia-based targets for over a month.
+On Monday, May 30th, 2022, [security researcher Kevin Beaumont published a blog post](https://doublepulsar.com/follina-a-microsoft-office-code-execution-vulnerability-1a47fce5629e) detailing an exploit, 'Follina', that had been discovered three days prior and discussed at length on Twitter. This exploit abuses the template retrieval mechanism in Microsoft Office installations on Microsoft Windows systems to initiate arbitrary code, using a vulnerability in Microsoft Support Diagnostic Tool (MSDT).
+On May 30th, 2022, [Microsoft acknowledged this issue](https://msrc-blog.microsoft.com/2022/05/30/guidance-for-cve-2022-30190-microsoft-support-diagnostic-tool-vulnerability/) and workarounds are available, but there is no patch. This exploit has been actively used against Russia-based targets for over a month.
 
-Exploit code is widely available online, and weaponization of this vulnerability by groups _other than_ the original authors is likely already underway. While awaiting patches from Microsoft, the best course of action is to monitor for use of this exploit and provide user education. Signatures for various detection tools have been made available and are linked from Kevin Beaumont's post.
+Exploit code is widely available online, and weaponization of this vulnerability by groups _other than_ the original authors is likely already underway. While awaiting patches from Microsoft, the best course of action is to monitor for use of this exploit, provide user education and implement workarounds. Signatures for various detection tools have been made available and are linked from Kevin Beaumont's post. Microsoft has also released detections for Microsoft Defender. This post will be updated as information becomes available.
 
-This vulnerability has not yet been assigned a CVE, but this post will be updated when one is assigned.
+This vulnerability has been assigned CVE-2022-30190.
 
 If you have feedback (did you agree/disagree that a notice should have been sent?) or questions, please comment on the discussion thread linked below. This notice cost the project approximately $50 USD to send. If you would like to support the project, [you can learn more here](https://bugalert.org/content/pages/financial-support.html).
